[package]
name = "lommix_ui"
authors = ["Lorenz Mielke"]
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", default-features = true, features = [
  "serialize",
  "bevy_asset",
  "bevy_sprite",
  "bevy_core_pipeline",
  "bevy_ui",

  "file_watcher",
] }
thiserror = "1.0.63"
nom = "7.1.3"

[dev-dependencies]
test-case = "3.3.1"
