[package]
name = "lommix_ui"
authors = ["Lorenz Mielke"]
version = "0.1.0"
edition = "2021"
description = "ui crate for bevy. Xml, hot reload, style dsl"
keywords = ["bevy", "ui", "xml", "html", "dsl"]
repository = "https://github.com/Lommix/lommix_ui"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_render",
  "bevy_ui",
  "bevy_asset",
  "bevy_text",
] }
thiserror = "1.0.63"
nom = "7.1.3"
interpolation = "0.3.0"

[dev-dependencies]
test-case = "3.3.1"
bevy = { version = "0.14", default-features = false, features = [
  "wayland",
  "bevy_render",
  "bevy_ui",
  "bevy_asset",
  "file_watcher",
  "multi_threaded",
  "bevy_audio",
  "default_font",
  "vorbis",
  "png",
] }
rand = "0.8.5"
bevy-inspector-egui = "0.26.0"
