[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0-rc.3", features = [
  "file_watcher",
  "multi_threaded",
] }
bevy_aseprite_ultra = { git = "https://github.com/Lommix/bevy_aseprite_ultra.git", rev = "af340c6" }
bevy_hui = { path = "../crates/bevy_hui" }
rand = "0.8.5"

[[bin]]
name = "input"
path = "src/input.rs"

[[bin]]
name = "slider"
path = "src/slider.rs"

[[bin]]
name = "ui"
path = "src/ui.rs"
