[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["file_watcher", "multi_threaded"] }
bevy_aseprite_ultra = "0.3.0"
bevy_hui = { path = "../crates/bevy_hui" }
rand = "0.8.5"

[[bin]]
name = "input"
path = "src/input.rs"

[[bin]]
name = "slider"
path = "src/slider.rs"

[[bin]]
name = "ui"
path = "src/ui.rs"
