[package]
name = "bevy_hui"
authors = ["Lorenz Mielke"]
version = "0.2.0"
edition = "2021"
description = "pseudo Html templating ui crate for the bevy-engine."
keywords = ["bevy", "ui", "xml", "html", "dsl"]
repository = "https://github.com/Lommix/bevy_hui"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["game-development"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "bevy_render",
  "bevy_ui",
  "bevy_asset",
  "bevy_state",
  "bevy_text",
] }
thiserror = "1.0.63"
nom = "7.1.3"
owo-colors = "4.1.0"

[features]
default = []

[dev-dependencies]
test-case = "3.3.1"
