[package]
name = "bevy_hui_widgets"
authors = ["Lorenz Mielke"]
description = "A collection of bevy components and systems to build widgets with `bevy_hui`."
version = "0.1.0"
edition = "2021"
readme = "README.md"
keywords = ["bevy", "ui", "xml", "html", "dsl"]
repository = "https://github.com/Lommix/bevy_hui"
license = "MIT OR Apache-2.0"
categories = ["game-development"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_ui"] }
bevy_hui = { path = "../bevy_hui" }

[dev-dependencies]
bevy = { version = "0.15", features = ["file_watcher", "multi_threaded"] }
