[package]
name = "bevy_html_ui"
authors = ["Lorenz Mielke"]
version = "0.1.0"
edition = "2021"
description = "Html tempalte ui crate for the bevy-engine."
keywords = ["bevy", "ui", "xml", "html", "dsl"]
repository = "https://github.com/Lommix/lommix_ui"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_render",
  "bevy_ui",
  "bevy_asset",
  "bevy_text",
] }
interpolation = "0.3.0"
thiserror = "1.0.63"
nom = "7.1.3"

[dev-dependencies]
test-case = "3.3.1"
